bug fix and refactoring

--- a/wep-app/src/index.html
+++ b/wep-app/src/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <style>
+    a:not([href]):not([tabindex]){
+      cursor: pointer !important;
+    }
+
+  </style>
   <meta charset="utf-8">
   <title>Client</title>
   <base href="/">
