move the css into style file

--- a/wep-app/src/index.html
+++ b/wep-app/src/index.html
@@ -1,14 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <style>
-    a:not([href]):not([tabindex]){
-      cursor: pointer !important;
-    }
-
-  </style>
   <meta charset="utf-8">
-  <title>Client</title>
+  <title>Twitter Search App</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
